--- a/header.html
+++ b/header.html
@@ -71,5 +71,5 @@
 <div class="nav">
     <a href="/sharky" class="navlinks">Sharky</a>
     <a href="/projects" class="navlinks">Projects</a>
-    <a href="" class="navlinks">Projects</a>
+    <a href="/about" class="navlinks">About</a>
 </div>
