--- a/header.html
+++ b/header.html
@@ -19,6 +19,9 @@
         font-family: "Roboto Mono", monospace;
         font-size: 11pt;
     }
+    h1 {
+        text-align: center;
+    }
     a {
         text-decoration: none;
         color: #00cccc;
