added sharky to this

--- a/header.html
+++ b/header.html
@@ -71,7 +71,7 @@
 </style>
 <body>
 <div class="nav">
-    <img src="img/title-bar.png" alt="" style="width: 16px; height: auto;">
-    <a target="_blank" href="https://www.sebis.net/sharky" class="navlinks">Sharky</a>
+    <img src="img/title-bar.png" alt="pp" style="width: 16px; height: auto;">
+    <a target="_blank" href="/sharky" class="navlinks">Sharky</a>
     <a target="_blank" href="https://www.sebis.net/downloads/sentials.jar" class="navlinks">Plugin</a>
 </div>
