--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <title>ItsSebis</title>
+    <title>ItsSebis | Home</title>
     <meta charset="utf-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -72,6 +72,7 @@
 <body>
 <div class="nav">
     <img src="img/title-bar.png" alt="pp" style="width: 16px; height: auto;">
-    <a target="_blank" href="/sharky" class="navlinks">Sharky</a>
+    <a target="_self" href="./projects" class="navlinks">Projekte</a>
+    <a target="_blank" href="./sharky" class="navlinks">Sharky</a>
     <a target="_blank" href="https://www.sebis.net/downloads/sentials.jar" class="navlinks">Plugin</a>
 </div>
