--- a/footer.html
+++ b/footer.html
@@ -13,6 +13,6 @@
 </style>
 <footer>
     <h2>ItsSebis</h2><br>
-    <p style="color: gray">5.10 - <?php echo(date("d.m")); ?></p>
+<!--    <p style="color: gray">5.10 - <?php echo(date("d.m")); ?></p>-->
     <p style="color: gray">2007 - <?php echo(date("Y")); ?></p>
 </footer>
