--- a/footer.html
+++ b/footer.html
@@ -6,13 +6,13 @@
         width: 100%;
         padding-bottom: 20px;
         padding-top: 20px;
-        min-height: 100px;
+        min-height: 80px;
         max-height: 250px;
         background-color: #262626;
     }
 </style>
 <footer>
-    <h2>ItsSebis</h2><br>
+    <h2><a href="https://github.com/itssebis" target="_blank">ItsSebis</a></h2><br>
 <!--    <p style="color: gray">5.10 - <?php echo(date("d.m")); ?></p>-->
     <p style="color: gray">2007 - <?php echo(date("Y")); ?></p>
 </footer>
